--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -11,7 +11,7 @@
 
 <form method="post">
 
-    <div class="form-group"></form>
+    <div class="form-group">
         <label for="deviceId">Device ID:</label>
         <input type="text" class="form-control" id="deviceId" name="deviceId" />
     </div>
