📝 Detalhes do projeto

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Team">Mebrors Grupo</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Team">Informações do Projeto</a>
                         </li>
                     </ul>
                 </div>
