--- a/Pages/Team.cshtml
+++ b/Pages/Team.cshtml
@@ -5,7 +5,7 @@
     var teamMembers = new[]
     {
 new { Name = "Airon Selistre" },
-new { Name = "Alex PErtille" },
+new { Name = "Alex Pertille" },
 new { Name = "Francisco Maier" },
 new { Name = "Jonathan Azevedo" },
 new { Name = "Rodrigo Silveira" },
